# extense

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  language.xts
extense/: CMakeLists.txt
extense/src/: main.cpp
include/: config.h.in  config.hpp.in
lib/extense/: CMakeLists.txt
lib/extense/include/extense/: ast.hpp  exception.hpp  lexer.h  parser.hpp  representation.hpp  source.h  source.hpp  token.h  token.hpp  value.h  value.hpp
lib/extense/include/extense/detail/: operations.h  operations.hpp  proxy.hpp  sourcecache.h  types.h  types.hpp  valuetypebase.h  valuetypebase.hpp
lib/extense/src/: ast.cpp  lexer.cpp  parser.cpp  source.cpp  token.cpp  value.cpp
lib/extense/src/detail/: operations.cpp  proxy.cpp  sourcecache.cpp  types.cpp
lib/extense/test/: ast.cpp  common.h  common.hpp  lexer.cpp  parser.cpp  runner.cpp  source.cpp  token.cpp  value.cpp
lib/extense/test/detail/: operations.cpp  sourcecache.cpp  types.cpp
lib/stdlib/: CMakeLists.txt
lib/stdlib/test/: runner.cpp
